--- a/client/src/main/resources/com/seasidechachacha/client/css/style.css
+++ b/client/src/main/resources/com/seasidechachacha/client/css/style.css
@@ -11,18 +11,6 @@
 .table-row-cell:empty {
     -fx-background-color: transparent;
 }
-/*.table-row-cell {
-    -fx-text-fill: white;
-}*/
-
-/* styling rows */
-/*.table-row-cell:odd:filled {
-    -fx-background-color: #0098f1;
-}
-
-.table-row-cell:even:filled {
-    -fx-background-color: lightblue;
-}*/
 .main-label {
     -fx-font-size: 20px;
     -fx-text-fill: #006abc;
@@ -44,4 +32,8 @@
 
 .button:hover {
     -fx-background-color: #006abc;
+}
+.navigation-item {
+    -fx-background-color: none;
+    -fx-text-fill: black;
 }
