--- a/client/src/main/resources/com/seasidechachacha/client/view/AddNewModerator.fxml
+++ b/client/src/main/resources/com/seasidechachacha/client/view/AddNewModerator.fxml
@@ -1,43 +1,31 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
 
-<VBox style="-fx-background-color: #ffffff;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.seasidechachacha.client.controllers.AddNewModeratorController">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="800.0" style="-fx-background-color: white;" stylesheets="@../css/style.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.seasidechachacha.client.controllers.AddNewModeratorController">
    <children>
-      <AnchorPane fx:id="firstlogin" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1050.0">
+      <AnchorPane prefHeight="800.0" prefWidth="800.0">
          <children>
-            <Text fill="#183486" layoutX="357.0" layoutY="254.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Tạo tài khoản người quản lý" textAlignment="CENTER" wrappingWidth="265.1875" VBox.vgrow="ALWAYS">
-               <font>
-                  <Font name="Tahoma Bold" size="17.0" />
-               </font>
-            </Text>
-            <Text fill="#20377c" layoutX="359.0" layoutY="320.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Tên đăng nhập:" textAlignment="CENTER" VBox.vgrow="ALWAYS">
-               <font>
-                  <Font name="Tahoma Bold" size="12.0" />
-               </font>
-            </Text>
-            <Button fx:id="btnAdd" layoutX="469.0" layoutY="459.0" mnemonicParsing="false" text="Tạo tài khoản" VBox.vgrow="ALWAYS" />
-            <Button fx:id="btnBack" layoutX="291.0" layoutY="459.0" mnemonicParsing="false" text="Quay lại" VBox.vgrow="ALWAYS" />
-            
-            <TextField fx:id="username" layoutX="467.0" layoutY="303.0" />
-            <Text fill="#20377c" layoutX="388.0" layoutY="362.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Mật khẩu: ">
-               <font>
-                  <Font name="Tahoma Bold" size="12.0" />
-               </font>
-            </Text>
-            <Text fill="#20377c" layoutX="335.0" layoutY="407.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Nhập lại mật khẩu: ">
-               <font>
-                  <Font name="Tahoma Bold" size="12.0" />
-               </font>
-            </Text>
-            <PasswordField fx:id="pass" layoutX="467.0" layoutY="345.0" />
-            <PasswordField fx:id="confirmPass" layoutX="467.0" layoutY="390.0" />
+            <Label layoutX="284.0" layoutY="30.0" styleClass="main-label" stylesheets="@../css/style.css" text="Thêm mới người quản lý" />
+            <Label layoutX="192.0" layoutY="141.0" styleClass="sub-label" text="Tên đăng nhập:" />
+            <TextField fx:id="user" layoutX="349.0" layoutY="141.0" />
+            <PasswordField fx:id="pass1" layoutX="349.0" layoutY="194.0" />
+            <Label layoutX="234.0" layoutY="194.0" styleClass="sub-label" text="Mật khẩu:" />
+            <Button fx:id="btnNext" layoutX="360.0" layoutY="339.0" mnemonicParsing="false" onAction="#createModerator" text="Thêm mới" />
+            <ImageView fx:id="logo" fitHeight="252.0" fitWidth="236.0" layoutX="535.0" layoutY="66.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../img/logo2.png" />
+               </image>
+            </ImageView>
+            <Label layoutX="167.0" layoutY="248.0" styleClass="sub-label" text="Nhập lại mật khẩu:" />
+            <PasswordField fx:id="pass2" layoutX="349.0" layoutY="248.0" />
          </children>
       </AnchorPane>
    </children>
