--- a/client/src/main/resources/com/seasidechachacha/client/view/StatisticNumberPackage.fxml
+++ b/client/src/main/resources/com/seasidechachacha/client/view/StatisticNumberPackage.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.chart.PieChart?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.DatePicker?>
@@ -8,6 +9,7 @@
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
 <VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="800.0" stylesheets="@../css/style.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.seasidechachacha.client.controllers.StatisticNumberPackageController">
    <children>
@@ -18,10 +20,11 @@
             <Label layoutX="188.0" layoutY="130.0" styleClass="sub-label" text="Thống kê:" />
             <ChoiceBox fx:id="statisticType" layoutX="284.0" layoutY="130.0" prefHeight="25.0" prefWidth="281.0" />
             <Label layoutX="194.0" layoutY="214.0" styleClass="main-label" text="Thống kê số lượng tiêu thụ nhu yếu phẩm" />
-            <TableView fx:id="packageTable" layoutX="50.0" layoutY="367.0" prefHeight="363.0" prefWidth="700.0">
+            <TableView fx:id="packageTable" layoutX="40.0" layoutY="367.0" prefHeight="311.0" prefWidth="396.0">
                <columns>
-                  <TableColumn fx:id="packageName" prefWidth="419.0" text="Gói nhu yếu phẩm" />
-                  <TableColumn fx:id="Quantity" prefWidth="280.0" text="Số lượng tiêu thụ" />
+                  <TableColumn fx:id="stt" minWidth="0.0" prefWidth="37.0" text="STT" />
+                  <TableColumn fx:id="packageName" prefWidth="236.0" text="Tên gói tiêu thụ" />
+                  <TableColumn fx:id="Quantity" prefWidth="121.0" text="Số lượng tiêu thụ" />
                </columns>
             </TableView>
             <DatePicker fx:id="dateInput" layoutX="155.0" layoutY="272.0" />
@@ -31,6 +34,12 @@
             <Button fx:id="dateButton" layoutX="194.0" layoutY="317.0" mnemonicParsing="false" text="Xác nhận" />
             <Button fx:id="monthButton" layoutX="590.0" layoutY="317.0" mnemonicParsing="false" text="Xác nhận" />
             <Button fx:id="allButton" layoutX="304.0" layoutY="745.0" mnemonicParsing="false" text="Thống kê theo mọi thời gian" />
+            <PieChart fx:id="piechart" layoutX="456.0" layoutY="381.0" prefHeight="283.0" prefWidth="319.0" />
+            <Label layoutX="457.0" layoutY="373.0" text="Biểu đồ thể hiện số lượng tiêu thụ các gói nhu yếu phẩm" textFill="#2b43bf">
+               <font>
+                  <Font name="System Bold Italic" size="12.0" />
+               </font>
+            </Label>
          </children>
       </AnchorPane>
    </children>
