--- a/client/src/main/resources/com/seasidechachacha/client/view/StatisticNumberStatus.fxml
+++ b/client/src/main/resources/com/seasidechachacha/client/view/StatisticNumberStatus.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.chart.PieChart?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.DatePicker?>
@@ -8,6 +9,7 @@
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
 <VBox stylesheets="@../css/style.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.seasidechachacha.client.controllers.StatisticNumberStatusController">
    <children>
@@ -18,11 +20,11 @@
             <Label layoutX="188.0" layoutY="130.0" styleClass="sub-label" text="Thống kê:" />
             <ChoiceBox fx:id="statisticType" layoutX="284.0" layoutY="130.0" prefHeight="25.0" prefWidth="281.0" />
             <Label layoutX="194.0" layoutY="214.0" styleClass="main-label" text="Thống kê số lượng trạng thái theo thời gian" />
-            <TableView fx:id="statusTable" layoutX="50.0" layoutY="367.0" prefHeight="363.0" prefWidth="700.0">
+            <TableView fx:id="statusTable" layoutX="71.0" layoutY="400.0" prefHeight="223.0" prefWidth="297.0">
               <columns>
-                <TableColumn fx:id="Time" prefWidth="178.0" text="Thời gian" />
-                <TableColumn fx:id="Status" prefWidth="156.0" text="Trạng thái" />
-                  <TableColumn fx:id="Quantity" prefWidth="365.0" text="Số Lượng" />
+                <TableColumn fx:id="Time" prefWidth="127.0" text="Thời gian" />
+                <TableColumn fx:id="Status" prefWidth="73.0" text="Trạng thái" />
+                  <TableColumn fx:id="Quantity" prefWidth="104.0" text="Số Lượng" />
               </columns>
             </TableView>
             <DatePicker fx:id="dateInput" layoutX="155.0" layoutY="272.0" />
@@ -32,6 +34,12 @@
             <Button fx:id="dateButton" layoutX="194.0" layoutY="317.0" mnemonicParsing="false" text="Xác nhận" />
             <Button fx:id="monthButton" layoutX="590.0" layoutY="317.0" mnemonicParsing="false" text="Xác nhận" />
             <Button fx:id="allButton" layoutX="304.0" layoutY="745.0" mnemonicParsing="false" text="Thống kê theo mọi thời gian" />
+            <PieChart fx:id="piechart" layoutX="430.0" layoutY="376.0" prefHeight="271.0" prefWidth="297.0" />
+            <Label layoutX="430.0" layoutY="376.0" prefHeight="27.0" prefWidth="297.0" text="Biểu đồ tròn thể hiện số lượng người theo trạng thái" textFill="#2b43bf">
+               <font>
+                  <Font name="System Bold Italic" size="12.0" />
+               </font>
+            </Label>
          </children>
       </AnchorPane>
    </children>
