--- a/client/src/main/resources/com/seasidechachacha/client/view/StatisticNumberBalance.fxml
+++ b/client/src/main/resources/com/seasidechachacha/client/view/StatisticNumberBalance.fxml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.chart.BarChart?>
+<?import javafx.scene.chart.CategoryAxis?>
+<?import javafx.scene.chart.NumberAxis?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
@@ -8,23 +11,32 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 
-
 <VBox stylesheets="@../css/style.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.seasidechachacha.client.controllers.StatisticNumberBalanceController">
    <children>
       <AnchorPane id="AnchorPane" prefHeight="800.0" prefWidth="800.0">
          <children>
             <Label layoutX="323.0" layoutY="27.0" styleClass="main-label" text="Thống kê chi tiết" />
-            <Button fx:id="nextButton" layoutX="635.0" layoutY="129.0" mnemonicParsing="false" onAction="#handleButton" text="Tiếp tục" />
+            <Button fx:id="nextButton" layoutX="635.0" layoutY="129.0" mnemonicParsing="false" text="Tiếp tục" />
             <Label layoutX="188.0" layoutY="130.0" styleClass="sub-label" text="Thống kê:" />
             <ChoiceBox fx:id="statisticType" layoutX="284.0" layoutY="130.0" prefHeight="25.0" prefWidth="281.0" />
             <Label layoutX="328.0" layoutY="208.0" styleClass="main-label" text="Thống kê dư nợ" />
-            <TableView fx:id="balanceTable" layoutX="51.0" layoutY="278.0" prefHeight="363.0" prefWidth="700.0">
+            <TableView fx:id="balanceTable" layoutX="27.0" layoutY="304.0" prefHeight="278.0" prefWidth="257.0">
                <columns>
-                  <TableColumn prefWidth="153.0" text="Thời gian" />
-                  <TableColumn prefWidth="546.0" text="Số dư nợ" />
+                  <TableColumn fx:id="time" prefWidth="86.0" text="Thời gian" />
+                  <TableColumn fx:id="balance" prefWidth="168.0" text="Tổng số dư nợ" />
                </columns>
             </TableView>
-            <Button fx:id="allButton" layoutX="305.0" layoutY="709.0" mnemonicParsing="false" onAction="#handleButton" text="Thống kê theo mọi thời gian" />
+            <Button fx:id="allButton" layoutX="334.0" layoutY="720.0" mnemonicParsing="false" text="Thống kê theo năm" />
+            <ChoiceBox fx:id="yearBox" layoutX="380.0" layoutY="672.0" prefWidth="150.0" />
+            <Label layoutX="283.0" layoutY="672.0" styleClass="sub-label" text="Chọn năm:" />
+            <BarChart fx:id="barChart" layoutX="332.0" layoutY="264.0" prefHeight="358.0" prefWidth="397.0">
+              <xAxis>
+                <CategoryAxis side="BOTTOM" fx:id="x" />
+              </xAxis>
+              <yAxis>
+                <NumberAxis fx:id="y" side="LEFT" />
+              </yAxis>
+            </BarChart>
          </children>
       </AnchorPane>
    </children>
